<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan suhu"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hasil"
        android:textSize="18sp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/btnToFahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Konversi ke Fahrenheit"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnToCelsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Konversi ke Celsius"
        android:layout_marginTop="10dp" />

</LinearLayout>
